<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Selecciona la operacion a realizar.</string>
    <string name="app_name">DNIe Autentica</string>
    <string name="app_title_dgt">DNIe Autentica</string>
    <string name="app_title_dgt_puntos">C.N.P. DNIe 3.0: SALDO PUNTOS</string>
    <string name="app_title_dgt_portal">C.N.P. DNIe 3.0: PORTAL WEB</string>
    <string name="app_title_dgt_revista">C.N.P. DNIe 3.0: REVISTA TRÁFICO</string>
    <string name="app_title_dgt_can">C.N.P. DNIe 3.0: SELECCION DE DNIE</string>
    <string name="app_title_gen">C.N.P. DNIe 3.0: GENERACION</string>
    <string name="app_title_nfc">C.N.P. DNIe 3.0: NFC</string>
    <string name="app_title_socketSSL">C.N.P. DNIe 3.0: CONEXION SSL</string>
    <string name="app_title_KeyStores">C.N.P. DNIe 3.0: CONEXION SSL</string>
    <string name="str_tab_cert06">Nombre</string>
    <string name="str_tab_cert08">DNI</string>
    <string name="op_dgtinit">Aproxime DNIe al dispositivo</string>
    <string name="op_dgtreinit">Conexión perdida. Inténtelo de nuevo.</string>
    <string name="op_candescription">Introduzca el CAN de su documento de identidad</string>
    <string name="op_canempty"></string>
    <string name="op_canselection">Seleccione el CAN de su DNIe</string>
    <string name="op_cannewcan">Añadir nuevo DNIe</string>
    <string name="op_nfc_load">Dispositivo NFC</string>
    <string name="op_menu0">Saldo de puntos</string>
    <string name="op_menu1">Portal estadístico</string>
    <string name="op_menu2">Portal Conductores</string>
    <string name="op_menu3">Gestión de multas</string>
    <string name="op_menu4">Revista Tráfico</string>    
    <string name="str_img_menu">Operacion</string>
    <string name="str_logo_desc">DNI electrónico</string>
    <string name="str_nfc_tags">Etiquetas NFC:</string>
    <string name="str_nfc_newtag">Nueva tarjeta DNIe encontrada</string>
    <string name="str_nfc_newtechtag">Tarjeta DNIe encontrada (TECH)</string>
    <string name="str_nfc_loadcert">LEER DNIe</string>
    <string name="str_nfc_loadcert2">Cargar certificado</string>
    <string name="psswd_dialog_title">Introduzca contraseña del DNIe</string>
    <string name="psswd_dialog_short">Contraseña DNIe</string>
    <string name="psswd_dialog_can">Introduzca CAN</string>
    <string name="psswd_dialog_ok">Aceptar</string>
    <string name="psswd_dialog_cancel">Cancelar</string>
    <string name="psswd_dialog_show">Mostrar contraseña</string>
    <string name="process_title">DNIe versión 3.0</string>
    <string name="process_msg_lectura">Leyendo DNIe...</string>
    <string name="process_msg_dni">Accediendo al DNIe</string>
    <string name="process_msg_channel">Estableciendo conexión segura</string>
    <string name="process_msg_web">Cargando web. Por favor, espere...</string>
    <string name="result_ok">Operación correcta</string>
    <string name="result_ok_description">La operación se ha completado correctamente</string>
    <string name="result_nok_title">Error en la operación</string>
    <string name="result_nok_description">La operación no ha podido completarse correctamente</string>
    <string name="result_nok_generic">Ha ocurrido un error en la conexión</string>
    <string name="dni_password_msg">Introduzca PIN.</string>
    <string name="dni_password_msg_1_try">Introduzca PIN. Queda 1 reintento.</string>
    <string name="dni_password_msg_n_tries">Introduzca PIN. Quedan \s reintentos.</string>
    <string name="psswd_dialog_hide">Ocultar contraseña</string>
    <string name="open_menu">"open menu"</string>
    <string name="help_title">"Ejemplo de acceso a portal seguro"</string>
    <string name="help_version">"Versión 1.2"</string>
    <string name="help_description">"Pulse dos veces sobre la operación deseada."</string>
    <string name="help_button">"Aceptar"</string>
    <string name="app_bienvenida">"Bienvenido"</string>
</resources>