<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/helpLayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/shape_gradient">
  
   	<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
       	android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/pastilla_dnie"
        android:contentDescription="@string/str_logo_desc"/>
   	
    <TextView
        android:id="@+id/texto_00"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="@string/help_title" 
        android:textColor="#FFFFFF"
       	android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <TextView
        android:id="@+id/texto_01"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
       	android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/help_version" 
        android:textColor="#FFFFFF"
       	android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="10dip"
        android:src="@drawable/help_ayto_red"
        android:contentDescription="@string/str_logo_desc"/>
    
    <TextView
        android:id="@+id/texto_02"
        android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/help_description" 
        android:textColor="#FFFFFF"
       	android:textAppearance="?android:attr/textAppearanceMedium"/>
	    
    <LinearLayout 
	    android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
	    <Button
	        android:id="@+id/help_ok_button"
       		android:layout_width="70dp"
       		android:layout_height="70dp"
		    android:layout_gravity="bottom"
        	android:layout_marginBottom="10dip"
			android:background="@drawable/xmlboton_volver"/>
	</LinearLayout>
</LinearLayout>